# aptax

./: .gitignore  pyproject.toml
aptax/: dataset.py  llm.py  main.py
aptax/data/openwebtext/: 0005002-2c814526f390fd9a3ea1c3f89c92e7df.txt  0005004-6fc8f70d1ec34eb1aa979773f7ea242e.txt  0005005-6925aacdea8b1116b6a8a1f551c57ff8.txt  0005006-2e6ef37569e3ecf45e77a488afcb93a0.txt  0005007-f4be1c5c1ac9f38ffd0be5af6d649134.txt  0005008-be4cb129cfd29fff5b87c5c53fac071f.txt  0005009-2d4050b9e8e718050706d877cee3112b.txt  0005011-495bb480e9be1165d9ba48c1b7322ec6.txt  0005012-a1db95271e017883a02c89e76a52413d.txt  0005014-3fa0046d1f34ffa1fd4fadec361fd809.txt  0005020-cfb52a5f92825d4ebf64bf0d328ecd10.txt  0005022-8284fc69ad8345a638be814f7e993b7c.txt  0005024-575f58fbbccc750f5d44cfe17e5b5626.txt  0005025-883e66ab207240a91157274a53d61605.txt  0005030-b775be64db52ec798e96e2d066417fa4.txt  0005031-6656342d3fc5707c338b7709a0277e9c.txt  0005034-0aca7af237ef8eba9f77b36162113639.txt  0005036-7cb17a0aa31cfca49b6f00d020aa9bb1.txt  0005039-c4fd8f748ff4382ba400b1dfb4f13f35.txt  0005040-47dd02f0b4b3553feae5de854a514774.txt  0005041-1b69dfdc037b4b5eb7e661eba00993b1.txt  0005046-386d54e0ace8017c3761e4779ad26873.txt  0005054-3179c852216aa632252fb3bce4b97d1a.txt  0005055-97d0172eed41bcd7e16f272dfae2cf9e.txt  0005065-a004f22efeaaeb9f822e8e0f8af05b5d.txt  0005066-9b7810eebdfae41683952f283119d03f.txt  0005067-b95b7e9d964dfaa27bf5fa8fea9cfe23.txt  0005071-7a8a00e5ce599f50dc518b4979349370.txt  0005073-52d41793ac45556ab4e92192e05436a8.txt  (+8238 more)
notebooks/: MiniGPT.ipynb  MininstructGPT.ipynb
(+1 files in other folders)
