[project]
name = "aptax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.5",
    "google-tunix>=0.1.6",
    "grain>=0.2.16",
    "ipywidgets>=8.1.8",
    "jax>=0.9.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.1",
]
